# TestQtTool

./: .gitignore  README.md
QtTest/: QtTest.slnx
QtTest/QtTest/: QtTest.cpp  QtTest.vcxproj  QtTest.vcxproj.filters
src/: CMakeLists.txt
